save_link_option

--- a/LDA.ipynb
+++ b/LDA.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -53,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -64,22 +64,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>index</th>\n",
+       "      <th>날짜</th>\n",
+       "      <th>닉네임</th>\n",
+       "      <th>댓글</th>\n",
+       "      <th>댓글개수</th>\n",
+       "      <th>본문</th>\n",
+       "      <th>제목</th>\n",
+       "      <th>조회수</th>\n",
+       "      <th>좋아요</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>2021.06.01. 00:12</td>\n",
+       "      <td>허긍(dr_r****)</td>\n",
+       "      <td>[삭제된 댓글입니다., 냉장고 바로 옆에 뒀는데 상대적으로 그런지 소음은 거의 없는...</td>\n",
+       "      <td>댓글 8\\n\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\n</td>\n",
+       "      <td>오늘 배송왔고 12도 세팅인데 보시다싶이 10.8도이고 점점 더 떨어지는중인데요뒤에...</td>\n",
+       "      <td>[와인 용품]\\n\\nW855B 불량?\\n|\\n와인 용품 관련\\n\\n\\n\\n\\n\\n\\...</td>\n",
+       "      <td>732</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "'비비노 메모리얼데이 20프로 할인\\n|\\n자유게시판\\n\\n\\n\\n\\n\\n\\n\\n\\n2021.05.31. 22:24'"
+       "   index                 날짜           닉네임  \\\n",
+       "0      0  2021.06.01. 00:12  허긍(dr_r****)   \n",
+       "\n",
+       "                                                  댓글  \\\n",
+       "0  [삭제된 댓글입니다., 냉장고 바로 옆에 뒀는데 상대적으로 그런지 소음은 거의 없는...   \n",
+       "\n",
+       "                                       댓글개수  \\\n",
+       "0  댓글 8\\n\\t\\t\\t\\t\\t\\t\\t\\n\\t\\t\\t\\t\\t\\t\\t\\t\\n   \n",
+       "\n",
+       "                                                  본문  \\\n",
+       "0  오늘 배송왔고 12도 세팅인데 보시다싶이 10.8도이고 점점 더 떨어지는중인데요뒤에...   \n",
+       "\n",
+       "                                                  제목  조회수  좋아요  \n",
+       "0  [와인 용품]\\n\\nW855B 불량?\\n|\\n와인 용품 관련\\n\\n\\n\\n\\n\\n\\...  732    0  "
       ]
      },
-     "execution_count": 15,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "free.제목[1]"
+    "free"
    ]
   },
   {
